--- a/style.css
+++ b/style.css
@@ -33,3 +33,9 @@ body{
     flex: 1;
     border: 1px solid white;    
 }
+
+.box:hover {
+    transform: scale(1.5);
+    transition: all 0.5s ease;
+    cursor: pointer;
+}
